[tool.poetry]
name = "src"
version = "0.1.0"
description = "Domain specific language for drawing polygons and other geometrical shapes."
authors = ["FandaCmuchar <fanda.cmuchar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
numpy = "^1.26.4"
shapely = "^2.0.4"
parsy = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
